Update the readme
Replace redis with valkey, and Elastic with OpenSearch

Remove T-Pot references

Configuration file support

Delete .claude directory

Don't want claude in the repo

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ lib/
 pyvenv.cfg
 __pycache__/
 
+# Local configuration — contains server-specific settings, never commit
+config.toml
+
+geoip-attack-map.code-workspace
+.venv/
+.claude/
