--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,26 @@
-aiohttp==3.13.2
-elasticsearch==8.18.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+attrs==25.4.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+Events==0.5
+frozenlist==1.8.0
+grpcio==1.78.0
+idna==3.11
+multidict==6.7.1
+opensearch-protobufs==1.3.0
+opensearch-py==3.1.0
+packaging==26.0
+pip-review==1.3.0
+propcache==0.4.1
+protobuf==6.33.5
+python-dateutil==2.9.0.post0
 pytz==2025.2
-redis==7.1.0
+valkey==6.1.1
+requests==2.32.5
+six==1.17.0
+typing_extensions==4.15.0
 tzlocal==5.3.1
+urllib3==2.6.3
+yarl==1.22.0
